--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ panel = "^1.2.0"
 jupyter-bokeh = "^3.0.7"
 markdown = "^3.4.3"
 boto3 = "^1.28.2"
+docker = "^6.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
